--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
 
+  <!-- css -->
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+
+  <!-- Bootstrap css -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
   <!-- Put your site title here -->
   <title>
     Neethish Kumar Ramasamy | User Experience Designer
@@ -40,23 +48,6 @@
   <!-- ***** Header ***** -->
 
   <header class="header" role="banner" id="top">
-    <div class="row">
-      <nav class="nav" role="navigation">
-        <ul class="nav__items">
-          <li class="nav__item"><a href="#top" class="nav__link">Home</a></li>
-
-          <li class="nav__item"><a href="#work" class="nav__link">UX/UI Work</a></li>
-          <li class="nav__item"><a href="#work" class="nav__link">Graphic Designing Work</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
-          <li class="nav__item">
-            <a href="#contact" class="nav__link">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
     <div class="header__text-box row">
       <div class="header__text">
         <h1 class="heading-primary">
@@ -68,15 +59,45 @@
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
+    
+    <!-- Bootsrap navabr -->
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#top">Home</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Work <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#work1">UX/UI Work</a></li>
+                <li><a href="#work2">Graphic Designing Work</a></li>
+              </ul>
+            </li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+   
   </header>
 
   <main role="main">
 
     <!-- ***** Work ***** -->
-    <div class="slick-carousel">
+    <div class="row">
+  <div class="slick-carousel">
       <div>
        <!-- Designing for Understanding:Enhancing Elderly Engagement with Digital Terms and Conditions  -->
-    <section class="work" id="work">
+    <section class="work" id="work1">
       <div class="row">
         <h2>UX/UI Work</h2>
         <div class="work__boxes">
@@ -96,7 +117,7 @@
               </ul>
               <br/>
               <div class="work__links">
-                <a onclick="navigateTodissertation()" class="link__text">Visit Project <span>&rarr;</span></a>
+                <btn onclick="navigateTodissertation()" class="link__text" >Visit Project <span>&rarr;</span></btn>
                 <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"></a> -->
               </div>
             </div>
@@ -131,7 +152,7 @@
               </ul>
               <br/>
               <div class="work__links">
-                <a onclick="navigateToresearch()" class="link__text">Visit Project <span>&rarr;</span></a>
+                <btn onclick="navigateToresearch()" class="link__text">Visit Project <span>&rarr;</span></btn>
                 <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"></a> -->
               </div>
             </div>
@@ -167,7 +188,7 @@
               </ul>
                 <br/>
                 <div class="work__links">
-                  <a onclick="navigateToGlobast()" class="link__text">Visit Project <span>&rarr;</span></a>
+                  <btn onclick="navigateToGlobast()" class="link__text">Visit Project <span>&rarr;</span></btn>
                   <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"></a> -->
                 </div>
               </div>
@@ -202,7 +223,7 @@
               </ul>
               <br/>
               <div class="work__links">
-                <a onclick="navigateToVerdura()" class="link__text">Visit Project <span>&rarr;</span></a>
+                <btn onclick="navigateToVerdura()" class="link__text">Visit Project <span>&rarr;</span></btn>
                 <!-- <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank"></a> -->
               </div>
             </div>
@@ -216,9 +237,11 @@
     </section>
   </div>
 </div>
+    </div>
+  
 
 <!-- Graphic designing work -->
-<section class="work" id="work">
+<!-- <section class="work" id="work2">
   <div class="row">
     <h2>Graphic Designing Work</h2>
     <div class="container">
@@ -246,8 +269,38 @@
       </div>
   </div>
   </div>
+</section> -->
+<!--  Cards 2 -->
+<section class="work" id="work2">
+  <div class="row">
+    <div class="card-container">
+      <div class="card">
+          <img src="./Graphic design.jpg" alt="Card Image">
+          <div class="card-content">
+              <h3>Ps & AI</h3>
+              <!-- <p>This is a description for card 1.</p> -->
+              <a href="https://www.behance.net/neethish17e309" target="_blank" title="Link to behance Profile" class="btn btn--pink">Visit Project</a>
+            </div>
+      </div>
+      <div class="card">
+          <img src="./Premiere Pro.jpg" alt="Card Image">
+          <div class="card-content">
+              <h3>Premiere Pro</h3>
+              <!-- <p>This is a description for card 2.</p> -->
+              <a href="https://drive.google.com/drive/folders/1n05_IlIrJOj47Aiekcr6-CcCr3uMAxmC?usp=sharing" target="_blank" title="Link to premier pro" class="btn btn--pink">Visit Project</a>
+            </div>
+      </div>
+      <div class="card">
+          <img src="./after effects.jpg" alt="Card Image">
+          <div class="card-content">
+              <h3>After Effects</h3>
+              <!-- <p>This is a description for card 3.</p> -->
+              <a href="https://drive.google.com/drive/folders/160uN5QSR3j75kDtMPsaPc-B3gWrHalJR?usp=sharing" target="_blank" title="Link to After Effects" class="btn btn--pink">Visit Project</a>
+            </div>
+      </div>
+  </div>
+  </div>
 </section>
-
     <!-- ***** skils ***** -->
 
     <section class="client" id="skills">
@@ -313,7 +366,9 @@ design approach, seeking to contribute expertise in a dynamic team environment.
 
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:neethish17@gmail.com"  target="_blank" class="btn">neethish17@gmail.com</a>
+        <btn href="mailto:neethish17@gmail.com"  target="_blank" class="btn btn--pink">neethish17@gmail.com</btn>
+
+        <!-- <btn href="mailto:neethish17@gmail.com"  target="_blank" class="btn">neethish17@gmail.com</btn> -->
       </div>
     </div>
   </section>
