--- a/dissertation.html
+++ b/dissertation.html
@@ -12,18 +12,19 @@
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
+<!-- Bootstrap css -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
   <meta name="keywords" content="Put your name, skills and some coding keywords" />
   <link rel="stylesheet" href="css/case_study1.css" />
 </head>
 <body>
 
-  <!-- ***** Header ***** -->
-  <section>
-  
-
+  <!-- ***** Header ***** -->  
   <header class="header" role="banner" id="top">
-    <div class="row">
+    <!-- <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#top" class="nav__link">Home</a></li>
@@ -38,7 +39,8 @@
           </li>
         </ul>
       </nav>
-    </div>
+    </div> -->
+    <!-- Bootsrap navabr -->
   <div class="row">
     <img src="./Case study dissertation/cover pg.jpg" class="work__image" alt="Project 1" />     
 
@@ -50,7 +52,6 @@
       </div>
     </div> -->
   </header>
-    </section>
 
   
 
@@ -106,7 +107,7 @@
                               </ul>
           <!-- Left -->
         </div>
-        <div class="work__text">
+        <div class="contact__info">
           <h3>Problem</h3>
           <p>Bridging the gap between elderly users and safe online experiences
             requires tackling the complexity and accessibility of Terms & Conditions (T&Cs).
@@ -256,7 +257,7 @@ researchers presented the prototypes to participants via WhatsApp links and Goog
                             </ul>
         <!-- Left -->
       </div>
-      <div class="work__text">
+      <div class="contact__info">
         <h3>Pilot Testing</h3>
         <p>The pilot testing stage aimed to identify and address any initial usability issues with the
           prototypes before presenting them to a wider audience. Here's a closer look:
@@ -426,7 +427,7 @@ researchers presented the prototypes to participants via WhatsApp links and Goog
                             </ul>
         <!-- Left -->
       </div>
-      <div class="work__text">
+      <div class="contact__info">
         <h3>Qualitative analysis</h3>
         <h3>Key Findings:</h3>
         <p>The key findings of the tetsings after analysing the data qualitatively are 
@@ -493,23 +494,29 @@ researchers presented the prototypes to participants via WhatsApp links and Goog
 
 
 
-    <!-- ***** Clients ***** -->
-
-    <section class="client" id="skills">
+    <!-- ***** prototype ***** -->
+    <section class="work" id="work2">
       <div class="row">
-        <h3 style="text-align: center;"> Prototype</h3>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=18-125&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=1%3A33&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 1</a>
-          </a>
-          <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=58-108&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=58%3A129&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 2</a>
-          <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=81-387&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=81%3A269&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 3</a>
+        <h3> Prototype</h3>
+        <div class="card-container">
+          <div class="card">
+            <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=18-125&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=1%3A33&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 1</a>
+          </div>
+          <br>
+          <div class="card">
+            <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=58-108&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=58%3A129&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 2</a>
+          </div>
+          <br>
+          <div class="card">
+            <a href="https://www.figma.com/proto/jUrlD7Yzq56Cyiz5gu0ZSU/Dissertation?page-id=0%3A1&type=design&node-id=81-387&viewport=247%2C337%2C0.07&t=QBh65YQys4gxYINU-1&scaling=scale-down&starting-point-node-id=81%3A269&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Prototype 3</a>
+          </div>
 
-          <!-- <img src="./images/fastlane.png" class="client__logo" alt="Company 3" /> -->
-          <!-- <img src="./images/chippy.png" class="client__logo" alt="Company 1" /> -->
-        </div>
+          </div>
+         
+      </div>
       </div>
     </section>
+  
     
 <!-- back to top -->
 <a href="#top" class="back-to-top" title="Back to Top">
@@ -517,6 +524,31 @@ researchers presented the prototypes to participants via WhatsApp links and Goog
 </a>
 
 <script src="./index.js"></script>
+
+
+<script>
+  function navigateToindex() {
+      // Change the URL to the desired next screen
+      window.location.href = 'index.html';
+  }
+  function navigateToresearch() {
+      // Change the URL to the desired next screen
+      window.location.href = 'research.html';
+  }
+
+  function navigateToGlobast() {
+      // Change the URL to the desired next screen
+      window.location.href = 'Globast.html';
+  }
+
+  function navigateToVerdura() {
+      // Change the URL to the desired next screen
+      window.location.href = 'Verdura.html';
+  }
+  
+
+
+</script>
 
 
 </body>
