--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
   
 
     <header class="header" role="banner" id="top">
-      <div class="row">
+      <!-- <div class="row">
         <nav class="nav" role="navigation">
           <ul class="nav__items">
             <li class="nav__item"><a href="#top" class="nav__link">Home</a></li>
@@ -37,7 +37,8 @@
             </li>
           </ul>
         </nav>
-      </div>
+      </div> -->
+      <!-- Bootsrap navabr -->
     <div class="row">
       <img src="./research/cover pg.jpg" class="work__image" alt="Project 1" />     
   
@@ -89,7 +90,7 @@
           </p>
           <!-- Left -->
         </div>
-        <div class="work__text">
+        <div class="contact__info">
           <h3>Problem</h3>
           <p>Traditional e-learning methods can be dry and lead to disengagement.
             Gamification, incorporating game-like elements, is a promising approach to
@@ -257,7 +258,7 @@
                         </ul>
         <!-- Left -->
       </div>
-      <div class="work__text">
+      <div class="contact__info">
         <h3>Forefit Method</h3>
         <h4> Findings:</h4>
         <ul class="left__list">
@@ -312,20 +313,25 @@
       </p>
       </div>
 </section>
-<!-- Prototype
- -->
-<section class="client" id="skills">
+<!-- Prototype-->
+ <section class="work" id="work2">
   <div class="row">
-    <h3 style="text-align: center;"> Prototype </h3>
-    <div class="client__logos">
-      <!-- Add logos of the clients or companies you'have worked with. -->
-      <a href="https://www.figma.com/proto/0dUUZJ2P0QwiHxzbnPwbZB/Research-methods?page-id=0%3A1&type=design&node-id=10-5&viewport=342%2C311%2C0.19&t=9LF6APvUSF80GAmk-1&scaling=scale-down&starting-point-node-id=10%3A5&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Leader Board</a>
-      </a>
-      <a href="https://www.figma.com/proto/0dUUZJ2P0QwiHxzbnPwbZB/Research-methods?page-id=2%3A264&type=design&node-id=160-184&viewport=139%2C168%2C0.16&t=YwCqCFzo2l3QaOen-1&scaling=min-zoom&starting-point-node-id=160%3A184&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Badges</a>
-      </a>
-    </div>
+    <h3> Prototype</h3>
+    <div class="card-container">
+      <div class="card">
+        <a href="https://www.figma.com/proto/0dUUZJ2P0QwiHxzbnPwbZB/Research-methods?page-id=0%3A1&type=design&node-id=10-5&viewport=342%2C311%2C0.19&t=9LF6APvUSF80GAmk-1&scaling=scale-down&starting-point-node-id=10%3A5&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Board</a>
+      </div>
+      <br>
+      <div class="card">
+        <a href="https://www.figma.com/proto/0dUUZJ2P0QwiHxzbnPwbZB/Research-methods?page-id=2%3A264&type=design&node-id=160-184&viewport=139%2C168%2C0.16&t=YwCqCFzo2l3QaOen-1&scaling=min-zoom&starting-point-node-id=160%3A184&show-proto-sidebar=1&mode=design" target="_blank" class="btn btn--pink">Badge</a>
+      </div>
+
+      </div>
+     
+  </div>
   </div>
 </section>
+
 <!-- back to top -->
 <a href="#top" class="back-to-top" title="Back to Top">
   <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
