--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ design approach, seeking to contribute expertise in a dynamic team environment.
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./NK.jpeg" alt="" />
           </div>
         </div>
       </div>
