--- a/index.html
+++ b/index.html
@@ -400,8 +400,7 @@ design approach, seeking to contribute expertise in a dynamic team environment.
   <a href="#top" class="back-to-top" title="Back to Top">
     <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
-
-  //scripts
+<!-- scripts -->
   <script>
     function navigateTodissertation() {
         // Change the URL to the desired next screen
