--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="work__box">
               <div class="work__text">
                 <h3>Globast:</h3>
-                <h4>Enhancing Elderly Engagement with Digital Terms and Conditions</h4>
+                <!-- <h4>Enhancing Elderly Engagement with Digital Terms and Conditions</h4> -->
                 <br>
               <ul class="work__list">
                 <li>UX</li>
@@ -213,7 +213,7 @@
           <div class="work__box">
             <div class="work__text">
               <h3>Verdura</h3>
-              <h4>Enhancing Elderly Engagement with Digital Terms and Conditions</h4>
+              <!-- <h4>Enhancing Elderly Engagement with Digital Terms and Conditions</h4> -->
               <br>
               <ul class="work__list">
                 <li>UX</li>
@@ -275,7 +275,7 @@
   <div class="row">
     <div class="card-container">
       <div class="card">
-          <img src="./Graphic design.jpg" width="50%" alt="Card Image">
+          <img class="img_size" src="./Graphic design.jpg" width="50%" alt="Card Image">
           <div class="card-content">
               <h3>Ps & AI</h3>
               <!-- <p>This is a description for card 1.</p> -->
@@ -283,7 +283,7 @@
             </div>
       </div>
       <div class="card">
-          <img src="./Premiere Pro.jpg" width="50%" alt="Card Image">
+          <img class="img_size" src="./Premiere Pro.jpg" width="50%" alt="Card Image">
           <div class="card-content">
               <h3>Premiere Pro</h3>
               <!-- <p>This is a description for card 2.</p> -->
@@ -291,7 +291,7 @@
             </div>
       </div>
       <div class="card">
-          <img src="./after effects.jpg" width="50%" alt="Card Image">
+          <img class="img_size" src="./after effects.jpg" width="50%" alt="Card Image">
           <div class="card-content">
               <h3>After Effects</h3>
               <!-- <p>This is a description for card 3.</p> -->
@@ -400,7 +400,8 @@ design approach, seeking to contribute expertise in a dynamic team environment.
   <a href="#top" class="back-to-top" title="Back to Top">
     <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
-<!-- scripts -->
+
+  //scripts
   <script>
     function navigateTodissertation() {
         // Change the URL to the desired next screen
