--- a/Globast.html
+++ b/Globast.html
@@ -301,13 +301,12 @@
         User testing was conducted with 4 participants (visually and auditory impaired)
         to understand how well they interact with Globast, an inclusive movie streaming platform.      </p>
 
-        <!-- <br> -->
+        <br>
                
-          The testers were given 5 tasks to complete:
-          <br>
-          <br>
+          <p>The testers were given 5 tasks to complete:</p>
+         
 
-          <ul>
+          <ul class="left__list">
         <li>Find and play "The Batman" movie in the superhero genre.</li>
           <br>
           <li>Find and play "The Batman" movie with Chinese subtitles.
