--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ design approach, seeking to contribute expertise in a dynamic team environment.
 
         </p>
         <!-- Replace the email with yours -->
-        <btn href="mailto:neethish17@gmail.com"  target="_blank" class="btn btn--pink">neethish17@gmail.com</btn>
+        <a href="mailto:neethish17@gmail.com"  target="_blank" class="btn btn--pink">neethish17@gmail.com</a>
 
         <!-- <btn href="mailto:neethish17@gmail.com"  target="_blank" class="btn">neethish17@gmail.com</btn> -->
       </div>
