--- a/index.html
+++ b/index.html
@@ -330,10 +330,8 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Innovative and detail-oriented UX/UI Designer with experience in creating engaging designs and improving user
-experiences. Proven track record in graphic design, user interface design, and user experience enhancement, with a
-passion for translating complex requirements into intuitive digital solutions. Excellent collaborator with a user-centered
-design approach, seeking to contribute expertise in a dynamic team environment.
+              With a unique blend of analytical and creative skills from a Bachelor's in Statistics and a Diploma in Graphic Designing, I embarked on a multifaceted journey that allowed me to merge design prowess with user-centric thinking and collaborative excellence. My internship at Webdoux honed my ability to juggle diverse responsibilities as the sole designer handling clients' graphic and UX/UI needs. At Thotbox, I excelled as a Junior Graphic Designer, leading teams, exceeding expectations to earn the "Star of the Month" award, and demonstrating effective communication across roles. Pursuing a Master's in User Experience in the UK deepened my knowledge of user research, interfaces, and emerging technologies while drawing upon my statistical background. Experiences like working at McDonald's reinforced the importance of teamwork. This well-rounded path has shaped me into a professional adept at delivering innovative solutions that resonate with users and clients alike.
+
 
             </p>
             <!-- Provide a link to your resume -->
